# raytracer_cpp

./: .gitignore  CMakeLists.txt  instructions  render.ps1  todo
docs/: notes.txt
ppm/: output.ppm
src/: color.cpp  color.h  color.hpp  includes.h  includes.hpp  matrix.cpp  matrix.h  tests.cpp  tuple.cpp  tuple.h  tuple.hpp
